--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -645,6 +645,8 @@ dwarf2_frame_h = dwarf2-frame.h
 environ_h = environ.h
 event_loop_h = event-loop.h
 event_top_h = event-top.h
+exc_request_U_h = exc_request_U.h
+exc_request_S_h = exc_request_S.h
 expression_h = expression.h $(symtab_h) $(doublest_h)
 f_lang_h = f-lang.h
 frame_h = frame.h
@@ -694,7 +696,10 @@ minimon_h = minimon.h
 mips_tdep_h = mips-tdep.h
 mipsnbsd_tdep_h = mipsnbsd-tdep.h
 monitor_h = monitor.h
+msg_reply_S_h = msg_reply_S.h
+msg_U_h = msg_U.h
 nbsd_tdep_h = nbsd-tdep.h
+notify_S_h = notify_S.h
 ns32k_tdep_h = ns32k-tdep.h
 objc_lang_h = objc-lang.h
 objfiles_h = objfiles.h $(gdb_obstack_h) $(symfile_h)
@@ -707,6 +712,7 @@ parser_defs_h = parser-defs.h $(doublest_h)
 ppc_tdep_h = ppc-tdep.h
 ppcnbsd_tdep_h = ppcnbsd-tdep.h
 proc_utils_h = proc-utils.h
+process_reply_S_h = process_reply_S.h
 regcache_h = regcache.h
 reggroups_h = reggroups.h
 remote_utils_h = remote-utils.h $(target_h)
@@ -1767,7 +1773,7 @@ gnu-nat.o: gnu-nat.c $(gdb_string_h) $(defs_h) $(inferior_h) $(symtab_h) \
 	$(value_h) $(language_h) $(target_h) $(gdb_wait_h) $(gdbcmd_h) \
 	$(gdbcore_h) $(gdbthread_h) $(gdb_assert_h) $(gnu_nat_h) \
 	$(exc_request_S_h) $(notify_S_h) $(process_reply_S_h) \
-	$(msg_reply_S_h) $(exc_request_U_h) $(msg_U_h)
+	$(msg_reply_S_h) $(exc_request_U_h) $(msg_U_h) $(gdb_obstack_h)
 gnu-v2-abi.o: gnu-v2-abi.c $(defs_h) $(gdb_string_h) $(symtab_h) \
 	$(gdbtypes_h) $(value_h) $(demangle_h) $(cp_abi_h)
 gnu-v3-abi.o: gnu-v3-abi.c $(defs_h) $(value_h) $(cp_abi_h) $(demangle_h) \
