--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -1851,7 +1851,8 @@ i386v4-nat.o: i386v4-nat.c $(defs_h) $(value_h) $(inferior_h) $(regcache_h) \
 	$(i386_tdep_h) $(i387_tdep_h) $(gregset_h)
 i387-tdep.o: i387-tdep.c $(defs_h) $(frame_h) $(inferior_h) $(language_h) \
 	$(value_h) $(gdbcore_h) $(floatformat_h) $(regcache_h) \
-	$(gdb_assert_h) $(gdb_string_h) $(doublest_h) $(i386_tdep_h)
+	$(gdb_assert_h) $(gdb_string_h) $(doublest_h) $(i386_tdep_h) \
+	$(i387_tdep_h)
 ia64-aix-nat.o: ia64-aix-nat.c $(defs_h) $(inferior_h) $(target_h) \
 	$(gdbcore_h) $(regcache_h) $(symtab_h) $(bfd_h) $(symfile_h) \
 	$(objfiles_h) $(gdb_stat_h)
