* Makefile.in (cli-cmds.o): Depend on $(gdb_vfork_h) 	* cli/cli-cmds.c: Include "gdb_vfork.h". 	(shell_escape): Use vfork.

--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -2416,7 +2416,7 @@ cli-cmds.o: $(srcdir)/cli/cli-cmds.c $(defs_h) $(completer_h) $(target_h) \
 	$(gdb_wait_h) $(gdb_regex_h) $(gdb_string_h) $(filenames_h) \
 	$(ui_out_h) $(top_h) $(cli_decode_h) $(cli_script_h) \
 	$(cli_setshow_h) $(cli_cmds_h) $(source_h) $(linespec_h) \
-	$(expression_h) $(language_h) $(objfiles_h)
+	$(expression_h) $(language_h) $(objfiles_h) $(gdb_vfork_h)
 	$(CC) -c $(INTERNAL_CFLAGS) $(srcdir)/cli/cli-cmds.c
 cli-decode.o: $(srcdir)/cli/cli-decode.c $(defs_h) $(symtab_h) \
 	$(gdb_regex_h) $(gdb_string_h) $(ui_out_h) $(cli_cmds_h) \
