* frv-tdep.c (gdb_string.h, frame.h, trad-frame.h): Include. 	(frv_frame_init_saved_regs): Add declaration. 	(frame_extra_info): Add new field ``saved_regs''. 	(frv_frame_chain, frv_frame_saved_pc, frv_analyze_prologue) 	(frv_skip_prologue, frv_init_extra_frame_info, frv_pop_frame_regular): 	Update frame related code. 	(frv_extract_struct_value_address): Adjust formatting. 	* Makefile.in (frv-tdep.o): Update dependencies. 	* config/frv/tm-frv.h (target_insert_watchpoint) 	(target_remove_watchpoint, target_insert_hw_breakpoint) 	(target_remove_hw_breakpoint): Delete these macros. 	(remote_insert_watchpoint, remote_remove_watchpoint) 	(remote_insert_hw_watchpoint, remote_remove_hw_watchpoint): Remove 	these declarations.

--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -1763,8 +1763,8 @@ frame.o: frame.c $(defs_h) $(frame_h) $(target_h) $(value_h) $(inferior_h) \
 	$(command_h) $(gdbcmd_h)
 frame-unwind.o: frame-unwind.c $(defs_h) $(frame_h) $(frame_unwind_h) \
 	$(gdb_assert_h) $(dummy_frame_h)
-frv-tdep.o: frv-tdep.c $(defs_h) $(inferior_h) $(symfile_h) $(gdbcore_h) \
-	$(arch_utils_h) $(regcache_h)
+frv-tdep.o: frv-tdep.c $(defs_h) $(gdb_string_h) $(inferior_h) $(symfile_h) \
+	$(gdbcore_h) $(arch_utils_h) $(regcache_h)
 f-typeprint.o: f-typeprint.c $(defs_h) $(gdb_obstack_h) $(bfd_h) $(symtab_h) \
 	$(gdbtypes_h) $(expression_h) $(value_h) $(gdbcore_h) $(target_h) \
 	$(f_lang_h) $(gdb_string_h)
